@@ -1,7 +1,9 @@
 `specaccum` <-
     function (comm, method = "exact", permutations = 100, conditioned=TRUE,
-              gamma="jack1", ...)
+              gamma="jack1", w = NULL, ...)
 {
+    if (!is.null(w) && !(method %in% c("random", "collector")))
+        stop(gettextf("weights 'w' can be only used with methods 'random' and 'collector'"))
     x <- comm
     x <- as.matrix(x)
     x <- x[, colSums(x) > 0, drop=FALSE]
@@ -22,11 +24,15 @@
         message("No actual accumulation since only 1 site provided")
     switch(method, collector = {
         sites <- 1:n
+        weights <- cumsum(w)
         specaccum <- accumulator(x, sites)
     }, random = {
         perm <- array(dim = c(n, permutations))
+        if (!is.null(w))
+            weights <- array(dim = c(n, permutations))
         for (i in 1:permutations) {
-            perm[, i] <- accumulator(x, sample(n))
+            perm[, i] <- accumulator(x, ord <- sample(n))
+            weights[,i] <- cumsum(w[ord])
         }
         sites <- 1:n
         specaccum <- apply(perm, 1, mean)
@@ -87,6 +93,8 @@
     })
     out <- list(call = match.call(), method = method, sites = sites,
                 richness = specaccum, sd = sdaccum, perm = perm)
+    if (!is.null(weights))
+        out$weights <- weights
     if (method == "rarefaction")
         out$individuals <- ind
     class(out) <- "specaccum"
